<resources>
    <string name="app_name">AmpX</string>

    <string name="unknown">UNKNOWN</string>

    <string name="settings">SETTINGS</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="power_on">POWER ON</string>
    <string name="powering_on">POWERING ON</string>
    <string name="powering_off">POWERING OFF</string>
    <string name="standby">STANDBY</string>

    <string name="cd">SACD/CD</string>
    <string name="network">NETWORK</string>
    <string name="phono">PHONO</string>
    <string name="tuner">TUNER</string>
    <string name="aux">AUX</string>
    <string name="recorder">RECORDER</string>

    <string name="direct">DIRECT</string>

    <string name="brightness">BRIGHTNESS</string>
    <string name="volume">VOLUME</string>

    <string name="devices">DEVICES</string>
    <string name="percentage">%</string>

    <string name="scan">SCAN</string>
    <string name="stop">STOP</string>
    <string name="close">CLOSE</string>

    <string name="connected">CONNECTED</string>
    <string name="connecting_dots">CONNECTING&#8230;</string>
    <string name="disconnecting_dots">DISCONNECTING&#8230;</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="left_short">L</string>
    <string name="right_short">R</string>
    <string name="balance_capital">BALANCE</string>
    <string name="tone">TONE</string>
    <string name="treble">TREBLE</string>
    <string name="bass">BASS</string>
    <string name="bass_boost">BASS BOOST</string>
    <string name="speakers_a">SPEAKERS A</string>
    <string name="speakers_b">SPEAKERS B</string>
    <string name="temp_zero">0°</string>
    <string name="volume_led">VOLUME LED</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="dac_digital_filter">DAC DIGITAL FILTER</string>

    <string name="out_of_range">\???</string>
    <string name="kHz8">8kHz</string>
    <string name="kHz11">11kHz</string>
    <string name="kHz12">12kHz</string>
    <string name="kHz16">16kHz</string>
    <string name="kHz22">22kHz</string>
    <string name="kHz24">24kHz</string>
    <string name="kHz32">32kHz</string>
    <string name="kHz44">44kHz</string>
    <string name="kHz48">48kHz</string>
    <string name="kHz64">64kHz</string>
    <string name="kHz88">88kHz</string>
    <string name="kHz96">96kHz</string>
    <string name="kHz128">128kHz</string>
    <string name="kHz176">176kHz</string>
    <string name="kHz196">196kHz</string>

    <string name="RXIN2">RXIN2</string>
    <string name="RXIN4">RXIN4</string>
    <string name="response_1">RESPONSE 1</string>
    <string name="response_2">RESPONSE 2</string>
    <string name="response_3">RESPONSE 3</string>
    <string name="response_4">RESPONSE 4</string>
    <string name="response_5">RESPONSE 5</string>

</resources>
