<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mbr.ampx.activity.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:background="@android:color/black">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp">

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/buttonConnection"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonImageActive="@drawable/baseline_bluetooth_white_48dp"
                app:buttonImageBackground="@drawable/bluetooth_button_background_black"
                app:buttonText="@string/connect"
                app:buttonTextViewTopPadding="-2dp"
                app:buttonTintActiveImage="false"
                android:layout_weight="1"/>

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/buttonPower"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonImageBackground="@drawable/power_button_background_black"
                app:buttonImageActive="@drawable/power_button_active"
                app:buttonText="@string/power_on"
                android:layout_weight="2"/>

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/buttonSettings"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonImageBackground="@drawable/bluetooth_button_background_black"
                app:buttonImageActive="@drawable/outline_settings_applications_white_custom_48dp"
                app:buttonText="@string/settings"
                app:buttonTextViewTopPadding="-2dp"
                app:buttonTintActiveImage="false"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.mbr.ampx.view.GaugeViewEx
            android:id="@+id/gaugeViewVolume"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:numberOfDivisionsEx="50"
            app:divisionValueEx="4"
            app:divisionValueMultiplierEx="0.5"/>

        <LinearLayout
            android:id="@+id/linearLayoutInputs"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintTop_toBottomOf="@id/gaugeViewVolume"
            android:layout_marginTop="16dp">

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/inputButtonCd"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:buttonImageBackground="@drawable/input_background_black"
                app:buttonImageActive="@drawable/input_active"
                app:buttonText="@string/cd"
                app:buttonTextViewTopPadding="@dimen/input_button_text_margin"/>

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/inputButtonNetwork"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:buttonImageBackground="@drawable/input_background_black"
                app:buttonImageActive="@drawable/input_active"
                app:buttonText="@string/network"
                app:buttonTextViewTopPadding="@dimen/input_button_text_margin"/>

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/inputButtonTuner"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:buttonImageBackground="@drawable/input_background_black"
                app:buttonImageActive="@drawable/input_active"
                app:buttonText="@string/tuner"
                app:buttonTextViewTopPadding="@dimen/input_button_text_margin"/>

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/inputButtonAux"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:buttonImageBackground="@drawable/input_background_black"
                app:buttonImageActive="@drawable/input_active"
                app:buttonText="@string/aux"
                app:buttonTextViewTopPadding="@dimen/input_button_text_margin"/>

            <com.mbr.ampx.view.CustomButton
                android:id="@+id/inputButtonRecorder"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:buttonImageBackground="@drawable/input_background_black"
                app:buttonImageActive="@drawable/input_active"
                app:buttonText="@string/recorder"
                app:buttonTextViewTopPadding="@dimen/input_button_text_margin"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>