<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.mbr.ampx.viewmodel.GlobalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDialogScanTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/devices"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="8dp" />

        <ProgressBar
            android:id="@+id/progressBarScanning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewDialogScanTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewScan"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/progressBarScanning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonScanScan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonScanClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewScan"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/buttonScanClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonScanScan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewScan"
            android:layout_marginBottom="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>